# xiaopeng-script

./: .gitignore  README.md  bash.sh  pyproject.toml  xiaopeng-monitor.spec
.github/workflows/: build-windows.yml
config/: bark_keys.txt  config.json  wechat_users.txt
scripts/: build_macos.sh  build_windows.ps1  pyinstaller_entry.py  run_macos.sh  run_macos_loop.sh  run_windows.ps1
src/xiaopeng_script/: __init__.py  chrome.py  cli.py  config.py  constants.py  monitor.py  notifier.py  query_api.py  state.py
